--- a/index.html
+++ b/index.html
@@ -1622,18 +1622,16 @@
             </math> -->
 
             <p class="lang lang-en">
-                But, usually the angle to calculate the orientation is measured from the x-asis, that is opossed to `v_x` in this case.
+                But normally the angle to calculate the orientation is measured from the x-axis, which in this case is in the opposite direction to `v_x`. So, if we measure the orientation of the boat with respect to the x axis, it would be 180 - 76 = 104º.
             </p>
             <p class="lang lang-es" lang="es">
-                Pero, normalmente, el ángulo para calcular la orientación se mide desde el eje x, que en este caso está en dirección opuesta a `v_x`. Así que, si medimos la orientación del bote respecto al eje x, ésta sería 180-76=104º.
+                Pero, normalmente, el ángulo para calcular la orientación se mide desde el eje x, que en este caso está en dirección opuesta a `v_x`. Así que, si medimos la orientación del bote respecto al eje x, ésta sería 180 - 76= 104º.
             </p>
             <p class="lang lang-en">
-                Then, first angle is -76º and second angle is 104º. Both measured from the positive side of the x axis. But the angle &alpha; represented in the drawing is measured between <b><i>v</i></b><sub>x</sub> and <b><i>v</i></b>. So, its value is 76º. <br />
-                And the boat must be propeled at a speed of 37.11 Km/h and in a direction that forms 76º with the port side of the river bank.
+                So, the answer to the exercise is that the boat must be propeled at a speed of 37.11 Km/h and in a direction that forms 104º with the river.
             </p>
             <p class="lang lang-es" lang="es">
-                Then, first angle is -76º and second angle is 104º. Both measured from the positive side of the x axis. But the angle &alpha; represented in the drawing is measured between <b><i>v</i></b><sub>x</sub> and <b><i>v</i></b>. So, its value is 76º. <br />
-                And the boat must be propeled at a speed of 37.11 Km/h and in a direction that forms 76º with the port side of the river bank.
+                Entonces, la respuesta al ejercicio es que la embarcación debe ser impulsada a una velocidad de 37,11 Km/h y en una dirección que forme 104º con el río.
             </p>
             <aside>
                 <!-- references to concepts used in this problem target="_blank" will display the link in a new tab. -->
