--- a/index.html
+++ b/index.html
@@ -1528,8 +1528,11 @@
 				       height="50"
 				       x="0"
 				       y="360" />
-					<text x="500" y="390" font-size="25" stroke="black" font-weight="bold">
+					<text class="lang lang-en" x="500" y="390" font-size="25" stroke="black" font-weight="bold">
 				        River bank
+				    </text>
+					<text class="lang lang-es" lang="es" x="500" y="390" font-size="25" stroke="black" font-weight="bold">
+				        Orilla del río
 				    </text>
 					<!--Upper river bank-->
 					<rect
