--- a/index.html
+++ b/index.html
@@ -1541,8 +1541,11 @@
 				       height="50"
 				       x="0"
 				       y="0" />
-					<text x="500" y="30" font-size="25" stroke="black" font-weight="bold">
+					<text class="lang lang-en" x="500" y="30" font-size="25" stroke="black" font-weight="bold">
 				        River bank
+				    </text>
+					<text class="lang lang-es" lang="es" x="500" y="30" font-size="25" stroke="black" font-weight="bold">
+				        Orilla del río
 				    </text>
 					<!--River-->
 					<rect
@@ -1551,8 +1554,11 @@
 				       height="310"
 				       x="0"
 				       y="50" />
-					<text x="500" y="192" font-size="25" stroke="brown" fill="brown" font-weight="bold">
+					<text class="lang lang-en" x="500" y="192" font-size="25" stroke="brown" fill="brown" font-weight="bold">
 				        River
+				    </text>
+					<text class="lang lang-es" lang="es" x="500" y="192" font-size="25" stroke="brown" fill="brown" font-weight="bold">
+				        Río
 				    </text>
 					<!--X-axis-->
 					<line x1="50" y1="320" x2="400" y2="320" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
