--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html lang="en">
 
 <head>
-    <!-- This element sets the character set your document should use to UTF-8 which includes most characters from the vast majority of written languages-->
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="styles/styles.css">
@@ -13,7 +12,11 @@
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
         content="The Pre-Universitary Physics Area aims to provide Physics students with the necessary information to start a universitary Physics course. Making enphasys in example exercises where main Physics and Mathematics concepts are used. And providing references to these concepts">
-    <!-- LOAD THE MATHJAX LIBRARY start -->
+   
+	<!--To set the viewport of the page, which will give the browser instructions on how to control the page's dimensions and scaling.-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- LOAD THE MATHJAX LIBRARY start -->
     <!-- DOCS: https://docs.mathjax.org/en/latest/basic/mathematics.html -->
     <!-- DEMO: https://github.com/mathjax/MathJax-demos-web -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
