--- a/index.html
+++ b/index.html
@@ -1794,18 +1794,21 @@
 
         <section> <!--Problem 2-->
             <h3 class="lang lang-en">Exercise 2</h3>
-            <h3 class="lang lang-es" lang="es">Exercise 2</h3>
+            <h3 class="lang lang-es" lang="es">Ejercicio 2</h3>
             <p class="lang lang-en">
                 An object moves in such a way that its velocity at a certain instant is 120 m/s and forms an angle of 30º with the horizontal. Find the horizontal and vertical components of the velocity. Express the velocity vector as a function of its components.
             </p>
             <p class="lang lang-es" lang="es">
-                An object moves in such a way that its velocity at a certain instant is 120 m/s and forms an angle of 30º with the horizontal. Find the horizontal and vertical components of the velocity. Express the velocity vector as a function of its components.
+                Un objeto se mueve de tal manera que su velocidad en un instante determinado es de 120 m/s y forma un ángulo de 30º con la horizontal. Halla las componentes horizontal y vertical de la velocidad. Expresa el vector velocidad en función de sus componentes.
             </p>
             <p class="lang lang-en">
-                The formulas to calculate the components of a vector <b><i>v</i></b> given its magnitude r and direction &theta; are:
+                The formulas to calculate the components of a vector `vecv` given its magnitude `norm(vecv)` and direction &theta; are:
+            </p>
+			<p class="lang lang-es" lang="es">
+                The formulas to calculate the components of a vector `vecv` given its magnitude `norm(vecv)` and direction &theta; are:
             </p>
             <p> 
-                <b><i>v</i></b><sub>x</sub> = r&middot;cos&theta; <br />
+                &emsp; `V_x = norm(vecv)*sin(theta)` <br />
                 <b><i>v</i></b><sub>y</sub> = r&middot;sen&theta; <br />
                 <b><i>v</i></b> = <b><i>v</i></b><sub>x</sub> + <b><i>v</i></b><sub>y</sub> <br />
                 Where r = 120 m/s, and &theta; = 30º. So <br />
