--- a/index.html
+++ b/index.html
@@ -1818,7 +1818,14 @@
 			</p>
 			<p>&emsp; `v_x = 120*cos(30º) = 120*sqrt(3)/2`  = 103.9 m/s </p>
 			<p>&emsp; `v_y = 120*sin(30º) = 120*1/2` = 60 m/s </p>
-                
+			<p class="lang lang-en">    
+            	And
+			</p>
+			<p class="lang lang-es" lang="es">
+				Y
+			</p>
+            <p>&emsp; `vecv = 103.9*veci m/s + 60*vecj m/s` </p>  
+			
             <aside>
                 <h4 class="lang lang-en">References</h4>
                 <h4 class="lang lang-es" lang="es">Referencias</h4>
