--- a/index.html
+++ b/index.html
@@ -1824,7 +1824,7 @@
 			<p class="lang lang-es" lang="es">
 				Y
 			</p>
-            <p>&emsp; `vecv = 103.9*veci m/s + 60*vecj m/s` </p>  
+            <p>&emsp; `vecv = 103.9*veci` m/s + `60*vecj` m/s </p>  
 			
             <aside>
                 <h4 class="lang lang-en">References</h4>
@@ -1854,18 +1854,18 @@
 
         <section> <!--Problem 3-->
             <h3 class="lang lang-en">Exercise 3</h3>
-            <h3 class="lang lang-en">Exercise 3</h3>
+            <h3 class="lang lang-es" lang="es">Ejercicio 3</h3>
             <p class="lang lang-en">
-                Find the scalar product of the vectors `5veci - 3vecj + 2veck`, `-2veci + vecj + 3veck` and the angle they form
+                Find the scalar product of the vectors `5veci - 3vecj + 2veck`, `-2veci + vecj + 3veck` and the angle they form.
             </p>
-            <p class="lang lang-en">
-                Find the scalar product of the vectors `5veci - 3vecj + 2veck`, `-2veci + vecj + 3veck` and the angle they form
-            </p>
-            <p class="lang lang-en">
-                The scalar product of two vectors `vecv` and `vecw`, given their components is
+            <p class="lang lang-es" lang="es">
+                Calcula el producto escalar de los vectores `5veci - 3vecj + 2veck`, `-2veci + vecj + 3veck` y el ángulo que forman.
             </p>
             <p class="lang lang-en">
                 The scalar product of two vectors `vecv` and `vecw`, given their components is
+            </p>
+            <p class="lang lang-es" lang="es">
+                El producto escalar de dos vectores `vecv` y `vecw`, dadas sys componentes, es
             </p>
             <p>
                 `vecv*vecw = x_1*x_2 + y_1*y_2 + z_1*z_2`
@@ -1873,7 +1873,7 @@
             <p class="lang lang-en">
                 To find the angle between the two vectors, `theta`, use the formula below.<br />
             </p>
-            <p class="lang lang-en">
+            <p class="lang lang-es" lang="es">
                 To find the angle between the two vectors, `theta`, use the formula below.<br />
             </p>
             <p>
@@ -1882,8 +1882,8 @@
             <p class="lang lang-en">  
                 Then,
             </p>
-            <p class="lang lang-en">  
-                Then,
+            <p class="lang lang-es" lang="es">  
+                Entonces,
             </p>
             <p> (5<b><i>i</i></b> - 3<b><i>j</i></b> + 2<b><i>k</i></b>)&middot;(-2<b><i>i</i></b> + <b><i>j</i></b>
                 + 3<b><i>k</i></b>) = 5&middot;(-2) + (-3)&middot;1 + 2&middot;3 =
@@ -1976,6 +1976,7 @@
 
             <aside>
                 <h4 class="lang lang-en">References</h4>
+				<h4 class="lang lang-es" lang="es">Referencias</h4>
                 <!-- references to concepts used in this problem target="_blank" will display the link in a new tab.-->
                 <ul>
                     <li>
