--- a/index.html
+++ b/index.html
@@ -1865,7 +1865,7 @@
                 The scalar product of two vectors `vecv` and `vecw`, given their components is
             </p>
             <p class="lang lang-es" lang="es">
-                El producto escalar de dos vectores `vecv` y `vecw`, dadas sys componentes, es
+                El producto escalar de dos vectores `vecv` y `vecw`, dadas sus componentes, es
             </p>
             <p>
                 `vecv*vecw = x_1*x_2 + y_1*y_2 + z_1*z_2`
@@ -1874,10 +1874,10 @@
                 To find the angle between the two vectors, `theta`, use the formula below.<br />
             </p>
             <p class="lang lang-es" lang="es">
-                To find the angle between the two vectors, `theta`, use the formula below.<br />
+                Para calcular el angulo  `theta` que forman dos vetores 'vecv' y 'vecw`, usamos la fórmula:
             </p>
             <p>
-                &emsp; `costheta  = (vecv*vecw)/(norm(vecv)*norm(vecw))`
+                &emsp; `cos(theta)  = (vecv*vecw)/(norm(vecv)*norm(vecw))`
             </p>
             <p class="lang lang-en">  
                 Then,
@@ -1885,48 +1885,10 @@
             <p class="lang lang-es" lang="es">  
                 Entonces,
             </p>
-            <p> (5<b><i>i</i></b> - 3<b><i>j</i></b> + 2<b><i>k</i></b>)&middot;(-2<b><i>i</i></b> + <b><i>j</i></b>
-                + 3<b><i>k</i></b>) = 5&middot;(-2) + (-3)&middot;1 + 2&middot;3 =
-                (-10) + (-3) + 6 = -7
-                <br />
-                |<b><i>a</i></b>| =
-                <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
-                    <semantics>
-                        <msqrt>
-                            <mn>25 + 9 + 4</mn>
-                        </msqrt>
-                        <annotation encoding="StarMath 5.0">sqrt{3} </annotation>
-                    </semantics>
-                </math>
-                =
-                <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
-                    <semantics>
-                        <msqrt>
-                            <mn>38</mn>
-                        </msqrt>
-                        <annotation encoding="StarMath 5.0">sqrt{3} </annotation>
-                    </semantics>
-                </math>
-                <br />
-                |<b><i>b</i></b>| =
-                <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
-                    <semantics>
-                        <msqrt>
-                            <mn>4 + 1 + 9</mn>
-                        </msqrt>
-                        <annotation encoding="StarMath 5.0">sqrt{3} </annotation>
-                    </semantics>
-                </math>
-                =
-                <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
-                    <semantics>
-                        <msqrt>
-                            <mn>14</mn>
-                        </msqrt>
-                        <annotation encoding="StarMath 5.0">sqrt{3} </annotation>
-                    </semantics>
-                </math>
-                <br />
+            <p>&emsp; 'vecv*vecw = << 5, -3, 2 >> * << -2, 1, 3 >> = 5*(-2) -3*1 + 2*3 = -10 -3 + 6 = -7</p>
+			<p>&emsp; norm(vecv) = sqrt(5^2 + (-3)^2 + 2^2) = sqrt(25 + 9 + 4) = sqrt(38)</p>
+            <p>&emsp; norm(vecw) = sqrt((-2)^2 + 1^2 + 3^2) = sqrt(4 + 1 + 9) = sqrt(14)</p>   
+                
                 <math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
                     <semantics>
                         <mrow>
