--- a/index.html
+++ b/index.html
@@ -1888,53 +1888,11 @@
             <p>&emsp; 'vecv*vecw = << 5, -3, 2 >> * << -2, 1, 3 >> = 5*(-2) -3*1 + 2*3 = -10 -3 + 6 = -7</p>
 			<p>&emsp; norm(vecv) = sqrt(5^2 + (-3)^2 + 2^2) = sqrt(25 + 9 + 4) = sqrt(38)</p>
             <p>&emsp; norm(vecw) = sqrt((-2)^2 + 1^2 + 3^2) = sqrt(4 + 1 + 9) = sqrt(14)</p>   
-                
-                <math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
-                    <semantics>
-                        <mrow>
-                            <mrow>
-                                <mi>ϕ</mi>
-                                <mo stretchy="false">=</mo>
-                                <msup>
-                                    <mi>cos</mi>
-                                    <mrow>
-                                        <mo stretchy="false">−</mo>
-                                        <mn>1</mn>
-                                    </mrow>
-                                </msup>
-                            </mrow>
-                            <mrow>
-                                <mrow>
-                                    <mo fence="true" form="prefix" stretchy="true">(</mo>
-                                    <mrow>
-                                        <mfrac>
-                                            <mrow>
-                                                <mo stretchy="false">−</mo>
-                                                <mn>7</mn>
-                                            </mrow>
-                                            <mrow>
-                                                <msqrt>
-                                                    <mn>38</mn>
-                                                </msqrt>
-                                                <mo stretchy="false">⋅</mo>
-                                                <msqrt>
-                                                    <mn>14</mn>
-                                                </msqrt>
-                                            </mrow>
-                                        </mfrac>
-                                    </mrow>
-                                    <mo fence="true" form="postfix" stretchy="true">)</mo>
-                                </mrow>
-                                <mo stretchy="false">=</mo>
-                                <mn>107.67º</mn>
-                            </mrow>
-                        </mrow>
-                        <annotation encoding="StarMath 5.0">%phi = cos^{-1}left ( frac {-7} { sqrt{38} cdot sqrt{14} }
-                            right ) = 107.67</annotation>
-                    </semantics>
-                </math>
-                <br />
-            </p>
+            <p>
+                &emsp; `theta  = arccos((vecv*vecw)/(norm(vecv)*norm(vecw))) = -7/(sqrt(38)*sqrt(14) = -sqrt(7)/(2*sqrt(19)) =` 
+				<span class="lang lang-en">107.67º</span> 
+				<span class="lang lang-es" lang="es">107,67º</span> 
+            </p>   
 
             <aside>
                 <h4 class="lang lang-en">References</h4>
