--- a/index.html
+++ b/index.html
@@ -1885,9 +1885,9 @@
             <p class="lang lang-es" lang="es">  
                 Entonces,
             </p>
-            <p>&emsp; 'vecv*vecw = << 5, -3, 2 >> * << -2, 1, 3 >> = 5*(-2) -3*1 + 2*3 = -10 -3 + 6 = -7</p>
-			<p>&emsp; norm(vecv) = sqrt(5^2 + (-3)^2 + 2^2) = sqrt(25 + 9 + 4) = sqrt(38)</p>
-            <p>&emsp; norm(vecw) = sqrt((-2)^2 + 1^2 + 3^2) = sqrt(4 + 1 + 9) = sqrt(14)</p>   
+            <p>&emsp; `vecv*vecw = << 5, -3, 2 >> * << -2, 1, 3 >> = 5*(-2) -3*1 + 2*3 = -10 -3 + 6 = -7`</p>
+			<p>&emsp; `norm(vecv) = sqrt(5^2 + (-3)^2 + 2^2) = sqrt(25 + 9 + 4) = sqrt(38)`</p>
+            <p>&emsp; `norm(vecw) = sqrt((-2)^2 + 1^2 + 3^2) = sqrt(4 + 1 + 9) = sqrt(14)`</p>   
             <p>
                 &emsp; `theta  = arccos((vecv*vecw)/(norm(vecv)*norm(vecw))) = -7/(sqrt(38)*sqrt(14) = -sqrt(7)/(2*sqrt(19)) =` 
 				<span class="lang lang-en">107.67º</span> 
