--- a/index.html
+++ b/index.html
@@ -1889,7 +1889,7 @@
 			<p>&emsp; `norm(vecv) = sqrt(5^2 + (-3)^2 + 2^2) = sqrt(25 + 9 + 4) = sqrt(38)`</p>
             <p>&emsp; `norm(vecw) = sqrt((-2)^2 + 1^2 + 3^2) = sqrt(4 + 1 + 9) = sqrt(14)`</p>   
             <p>
-                &emsp; `theta  = arccos((vecv*vecw)/(norm(vecv)*norm(vecw))) = -7/(sqrt(38)*sqrt(14) = -sqrt(7)/(2*sqrt(19)) =` 
+                &emsp; `theta  = arccos((vecv*vecw)/(norm(vecv)*norm(vecw))) = -7/(sqrt(38)*sqrt(14)) = -sqrt(7)/(2*sqrt(19)) =` 
 				<span class="lang lang-en">107.67º</span> 
 				<span class="lang lang-es" lang="es">107,67º</span> 
             </p>   
