--- a/index.html
+++ b/index.html
@@ -1947,46 +1947,29 @@
 				    <text x="380" y="220" font-size="25" stroke="brown" fill="brown">
 						E
 					</text>
-					<!--Y-axis-->
-					<line x1="250" y1="350" x2="250" y2="150" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="230" y="160" font-size="25" stroke="brown" fill="brown">
-						y
+					<!--West-->
+					<line x1="200" y1="200" x2="0" y2="200" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text class="lang lang-en" x="5" y="220" font-size="25" stroke="brown" fill="brown">
+						W
 					</text>
-					<!--Vr <9,0> Km/h scale 4:1-->
-					<line x1="400" y1="250" x2="436" y2="250" stroke="brown" stroke-width="2" marker-end="url(#Brownarrow)" />
-				    <text x="410" y="235" font-size="20" stroke="brown" fill="brown">
-						V
-						<tspan dx="-5" dy="8" font-size="20" stroke-width="0.3">r</tspan>
+					<text class="lang lang-es" lang="es" x="5" y="220" font-size="25" stroke="brown" fill="brown">
+						O
 					</text>
-					<!--Vy <0,36> Km/h scale 4:1-->
-					<line x1="250" y1="320" x2="250" y2="176" stroke="green" stroke-width="2" marker-end="url(#Greenarrow)" />
-				    <text x="255" y="220" font-size="20" stroke="green" fill="green">
-						V
-						<tspan dx="-5" dy="8" font-size="20" stroke-width="0.3">y</tspan>
+					<!--North-->
+					<line x1="200" y1="200" x2="200" y2="0" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="180" y="10" font-size="25" stroke="brown" fill="brown">
+						N
 					</text>
-					<!--Vx <-9,0> Km/h scale 4:1-->
-					<line x1="250" y1="320" x2="214" y2="320" stroke="green" stroke-width="2" marker-end="url(#Greenarrow)" />
-				    <text x="210" y="340" font-size="20" stroke="green" fill="green">
-						V
-						<tspan dx="-5" dy="8" font-size="20" stroke-width="0.3">x</tspan>
+					<!--South-->
+					<line x1="200" y1="200" x2="200" y2="400" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="180" y="370" font-size="25" stroke="brown" fill="brown">
+						S
 					</text>
-					<!--V <-9,36> Km/h scale 4:1-->
-					<line x1="214" y1="320" x2="214" y2="176" stroke="blue" stroke-width="2" stroke-dasharray="5,5" />
-					<line x1="250" y1="176" x2="214" y2="176" stroke="blue" stroke-width="2" stroke-dasharray="5,5" />
-					<line x1="250" y1="320" x2="214" y2="176" stroke="blue" stroke-width="2" marker-end="url(#Bluearrow)" />
-				    <text x="226" y="220" font-size="20" stroke="blue" fill="blue">
-						V
+					<!--NorthEast-->
+					<line x1="200" y1="200" x2="370" y2="30" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="370" y="50" font-size="25" stroke="brown" fill="brown">
+						NE
 					</text>
-					<!--Boat-->
-					<!--moves the object by 20 and 20, and rotates -104º with +angle clockwise-->
-					<g transform="translate(230, 300) 
-									rotate(-104, 20, 20)">
-				    	<path
-							d="M 0 10 q 20 -10 40 10 q -20 20 -40 10 z"
-							stroke="brown"
-							style="fill:none" 
-						/>
-				    </g>	 
 				</svg>
 			
             <aside>
