--- a/index.html
+++ b/index.html
@@ -710,9 +710,9 @@
                   
                     <line x1="200" y1="10" x2="200" y2="160" stroke="green" stroke-dasharray="5,5" stroke-width="2"/>
                   	<!--Draw an angle mark-->
-                    <path d="M 30 160 a 20 20 0 0 0 -12 -12" fill="transparent" stroke="green"/>
+                    <path d="M 30 160 A 20 20 0 0 0 26 148" fill="transparent" stroke="green"/>
                   
-                    <text x="25" y="150" font-size="15" stroke="green" fill="green">
+                    <text x="34" y="155" font-size="15" stroke="green" fill="green">
                           &#x03B8; <!-- This is the unicode for lowercase theta -->
                     </text>
                 </svg > 
