--- a/index.html
+++ b/index.html
@@ -1711,6 +1711,11 @@
 				    <text x="360" y="60" font-size="25" stroke="brown" fill="brown">
 						NE
 					</text>
+					<!--Draw an angle mark-->
+                    <path d="M 220 200 A 20 20 0 0 0 216 188" fill="transparent" stroke="green"/>
+                  
+                    <text x="224" y="195" font-size="15" stroke="green" fill="green">
+                          &#x03B8; <!-- This is the unicode for lowercase theta -->
 				</svg>
 			
             <aside>
