--- a/index.html
+++ b/index.html
@@ -1715,7 +1715,7 @@
                     <path d="M 220 200 A 20 20 0 0 0 214 186" fill="transparent" stroke="green"/>
                   
                     <text x="224" y="195" font-size="15" stroke="green" fill="green">
-                          &#x03B8; <!-- This is the unicode for lowercase theta -->
+                          &#x03B8; = 45º<!-- This is the unicode for lowercase theta -->
 				</svg>
 			
             <aside>
