--- a/index.html
+++ b/index.html
@@ -1710,7 +1710,6 @@
 					</text>
 					<!--Draw an angle mark-->
                     <path d="M 220 200 A 20 20 0 0 0 214 186" fill="transparent" stroke="green"/>
-                  
                     <text x="224" y="195" font-size="15" stroke="green" fill="green">
                           &#x03B8; = 45º<!-- This is the unicode for lowercase theta -->
 					<!--Velocity vector with scale 1:4 x=(600*cos45)/4=106 y=(600*sen45)/4=106-->
@@ -1719,6 +1718,8 @@
 						`vecv`
 					</text>	
 				</svg>
+
+				<p> &emsp; `norm(proj_w vecv) = norm(vecv)costheta` </p>
 			
             <aside>
                 <h4 class="lang lang-en">References</h3>
