--- a/index.html
+++ b/index.html
@@ -1712,6 +1712,7 @@
                     <path d="M 220 200 A 20 20 0 0 0 214 186" fill="transparent" stroke="green"/>
                     <text x="224" y="195" font-size="15" stroke="green" fill="green">
                           &#x03B8; = 45º<!-- This is the unicode for lowercase theta -->
+					</text>
 					<!--Velocity vector with scale 1:4 x=(600*cos45)/4=106 y=(600*sen45)/4=106-->
 					<line x1="200" y1="200" x2="306" y2="94" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
 				    <text x="260" y="140" font-size="25" stroke="brown" fill="brown">
