--- a/index.html
+++ b/index.html
@@ -1714,19 +1714,25 @@
                           &#x03B8; = 45º<!-- This is the unicode for lowercase theta -->
 					</text>
 					<!--Velocity vector with scale 1:4 x=(600*cos45)/4=106 y=(600*sen45)/4=106-->
-					<line x1="200" y1="200" x2="306" y2="94" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="260" y="140" font-size="25" stroke="brown" fill="brown">
+					<line x1="200" y1="200" x2="306" y2="94" stroke="green" stroke-width="2" marker-end="url(#Greenarrow)" />
+				    <text x="240" y="140" font-size="20" stroke="brown" fill="brown" font-weight="bold">
 						V
 					</text>	
 				</svg>
 				<p class="lang lang-en">
-                To find the projection of the velocity in the east direction, we use the expresion.
-            </p>
-			 <p class="lang lang-es" lang="es">
-                Para calcular la proyección de la velocidad en la dirección este, usamos la expresión.
-            </p>
+               		To find the projection of the velocity in the east direction, we use the expresion.
+            	</p>
+				 <p class="lang lang-es" lang="es">
+                	Para calcular la proyección de la velocidad en la dirección este, usamos la expresión.
+            	</p>
 				<p> &emsp; `norm(proj_w vecv) = norm(vecv)costheta` </p>
-			
+				<p class="lang lang-en">
+               		To find the projection of the velocity in the east direction, we use the expresion.
+            	</p>
+				 <p class="lang lang-es" lang="es">
+                	Para calcular la proyección de la velocidad en la dirección este, usamos la expresión.
+            	</p>
+				
             <aside>
                 <h4 class="lang lang-en">References</h3>
                 <h4 class="lang lang-es" lang="es">Referencias</h3>
