--- a/index.html
+++ b/index.html
@@ -1715,7 +1715,7 @@
 					</text>
 					<!--Velocity vector with scale 1:4 x=(600*cos45)/4=106 y=(600*sen45)/4=106-->
 					<line x1="200" y1="200" x2="306" y2="94" stroke="green" stroke-width="2" marker-end="url(#Greenarrow)" />
-				    <text x="240" y="140" font-size="20" stroke="brown" fill="brown" font-weight="bold">
+				    <text x="240" y="140" font-size="20" stroke="green" fill="brown" font-weight="bold">
 						V
 					</text>	
 				</svg>
@@ -1725,13 +1725,14 @@
 				 <p class="lang lang-es" lang="es">
                 	Para calcular la proyección de la velocidad en la dirección este, usamos la expresión.
             	</p>
-				<p> &emsp; `norm(proj_w vecv) = norm(vecv)costheta` </p>
+				<p> &emsp; `norm(proj_E vecv) = norm(vecv)costheta` </p>
 				<p class="lang lang-en">
-               		To find the projection of the velocity in the east direction, we use the expresion.
+               		Where `norm(vecv)` = 600 and `theta`=45º. So
             	</p>
 				 <p class="lang lang-es" lang="es">
-                	Para calcular la proyección de la velocidad en la dirección este, usamos la expresión.
+                	Where `norm(vecv)` = 600 and `theta`=45º. Entonces
             	</p>
+				<p> &emsp; `norm(proj_E vecv) = 600*cos45º` </p>
 				
             <aside>
                 <h4 class="lang lang-en">References</h3>
