--- a/index.html
+++ b/index.html
@@ -1732,7 +1732,7 @@
 				 <p class="lang lang-es" lang="es">
                 	Where `norm(vecv)` = 600 and `theta`=45º. Entonces
             	</p>
-				<p> &emsp; `norm(proj_E vecv) = 600*cos45º` </p>
+				<p> &emsp; `norm(proj_E vecv) = 600*cos45º` = 424 Km/h</p>
 				
             <aside>
                 <h4 class="lang lang-en">References</h3>
