--- a/index.html
+++ b/index.html
@@ -1715,9 +1715,17 @@
 					</text>
 					<!--Velocity vector with scale 1:4 x=(600*cos45)/4=106 y=(600*sen45)/4=106-->
 					<line x1="200" y1="200" x2="306" y2="94" stroke="green" stroke-width="2" marker-end="url(#Greenarrow)" />
-				    <text x="240" y="140" font-size="20" stroke="green" fill="brown" font-weight="bold">
+				    <text x="240" y="140" font-size="20" stroke="green" fill="green" font-weight="bold">
 						V
 					</text>	
+					<!--Proyection vector with scale 1:4 x=424/4=106 -->
+					<line x1="306" y1="94" x2="306" y2="200" stroke="blue" stroke-width="2" stroke-dasharray="5,5" />
+					<line x1="200" y1="200" x2="306" y2="200" stroke="green" stroke-width="2"  stroke-dasharray="5,5" marker-end="url(#Greenarrow)" />
+				     <text x="220" y="220" font-size="20" stroke="green" fill="green" font-weight="bold" stroke-width="0.6">
+                      proj
+                      <tspan dx="-5" dy="8" font-size="15" stroke-width="0.3">E</tspan>
+                      <tspan dx="-5" dy="-8" font-size="20" stroke-width="0.6" font-weight="bold">v</tspan> 
+                    </text>
 				</svg>
 				<p class="lang lang-en">
                		To find the projection of the velocity in the east direction, we use the expresion.
