--- a/index.html
+++ b/index.html
@@ -1721,26 +1721,27 @@
 					<!--Proyection vector with scale 1:4 x=424/4=106 -->
 					<line x1="306" y1="94" x2="306" y2="200" stroke="blue" stroke-width="2" stroke-dasharray="5,5" />
 					<line x1="200" y1="200" x2="306" y2="200" stroke="green" stroke-width="2"  stroke-dasharray="5,5" marker-end="url(#Greenarrow)" />
-				     <text x="220" y="220" font-size="20" stroke="green" fill="green" font-weight="bold" stroke-width="0.6">
+				    <text x="220" y="220" font-size="20" stroke="green" fill="green" font-weight="bold" stroke-width="0.6">
                       proj
                       <tspan dx="-5" dy="8" font-size="15" stroke-width="0.3">E</tspan>
                       <tspan dx="-5" dy="-8" font-size="20" stroke-width="0.6" font-weight="bold">v</tspan> 
                     </text>
 				</svg>
-				<p class="lang lang-en">
-               		To find the projection of the velocity in the east direction, we use the expresion.
-            	</p>
-				 <p class="lang lang-es" lang="es">
-                	Para calcular la proyección de la velocidad en la dirección este, usamos la expresión.
-            	</p>
-				<p> &emsp; `norm(proj_E vecv) = norm(vecv)costheta` </p>
-				<p class="lang lang-en">
-               		Where `norm(vecv)` = 600 and `theta`=45º. So
-            	</p>
-				 <p class="lang lang-es" lang="es">
-                	Where `norm(vecv)` = 600 and `theta`=45º. Entonces
-            	</p>
-				<p> &emsp; `norm(proj_E vecv) = 600*cos45º` = 424 Km/h</p>
+			</figure>
+			<p class="lang lang-en">
+				To find the projection of the velocity in the east direction, we use the expresion.
+			</p>
+			 <p class="lang lang-es" lang="es">
+				Para calcular la proyección de la velocidad en la dirección este, usamos la expresión.
+			</p>
+			<p> &emsp; `norm(proj_E vecv) = norm(vecv)costheta` </p>
+			<p class="lang lang-en">
+				Where `norm(vecv)` = 600 and `theta`=45º. So
+			</p>
+			 <p class="lang lang-es" lang="es">
+				Where `norm(vecv)` = 600 and `theta`=45º. Entonces
+			</p>
+			<p> &emsp; `norm(proj_E vecv) = 600*cos45º` = 424 Km/h</p>
 				
             <aside>
                 <h4 class="lang lang-en">References</h3>
