--- a/index.html
+++ b/index.html
@@ -1659,7 +1659,7 @@
         <section>
             <!--Problem 4-->
             <h3 class="lang lang-en">Exercise 4</h3>
-			<h3 class="lang lang-es" lang="es">Exercise 4</h3>
+			<h3 class="lang lang-es" lang="es">Ejercicio 4</h3>
             <p class="lang lang-en">
                 An airplane is moving with a speed of 600 km/h in the NE direction. Find the projection of its velocity in the east direction.
             </p>
@@ -1739,7 +1739,7 @@
 				Where `norm(vecv)` = 600 and `theta`=45º. So
 			</p>
 			 <p class="lang lang-es" lang="es">
-				Where `norm(vecv)` = 600 and `theta`=45º. Entonces
+				Donde `norm(vecv)` = 600 y `theta`=45º. Entonces
 			</p>
 			<p> &emsp; `norm(proj_E vecv) = 600*cos45º` = 424 Km/h</p>
 				
