--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <!-- load the default AsciiMath configuration  http://asciimath.org/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
 
-    <!-- loads page script file-->
-    <script src="scripts/main.js" defer></script>
+    <!-- loads page script files-->
+    <script src="scripts/SelectLanguage.js" defer></script>
 </head>
 
 <!--the body contains all the content that you want to show to web users when they visit your page-->
