--- a/vectors.html
+++ b/vectors.html
@@ -1244,7 +1244,7 @@
     <article>
         <h2 id="Vector Operations Exercises" class="lang lang-en">VECTOR OPERATIONS EXERCISES</h2>
         <h2 id="Ejercicios con vectores" class="lang lang-es" lang="es">EJERCIOS CON VECTORES</h2>
-        <section>
+        <section> <!--Exercise 1-->
             <h3 class="lang lang-en">Exercise 1</h3>
             <h3 class="lang lang-es" lang="es">Ejercicio 1</h3>
             <p class="lang lang-en">
@@ -1509,7 +1509,7 @@
             <aside>
                 <!-- references to concepts used in this problem target="_blank" will display the link in a new tab. -->
                 <h4 class="lang lang-en">References</h4>
-                <h4 class="lang lang-es" lang="es">References</h4>
+                <h4 class="lang lang-es" lang="es">Referencias</h4>
                 <ul>
                     <li>
                         <a href="https://www.mathsisfun.com/definitions/coordinate-plane.html" target="_blank">
@@ -1535,9 +1535,72 @@
             </aside>
         </section>
 
-        <section> <!--Problem 2-->
+        <section> <!--Exercise 2-->
             <h3 class="lang lang-en">Exercise 2</h3>
             <h3 class="lang lang-es" lang="es">Ejercicio 2</h3>
+            <p class="lang lang-en">
+                Draw, one after the other, the vectors `veca = 2veci + 3vecj`, `vecb = 4veci - 2vecj`, `vecc = 3veci - 2vecj` and `vecd = -9veci + j`. Calculate the vector resulting from the sum of all of them and its magnitude.
+            </p>
+            <p class="lang lang-es" lang="es">
+                Dibuja, uno a continuación del otro, los vectores `veca = 2veci + 3vecj`, `vecb = 4veci - 2vecj`, `vecc = 3veci - 2vecj` y `vecd = -9veci + j`. Calcula el vector resultante de la suma de todos ellos y su magnitud. 
+            </p>
+            
+            <figure class="centered">
+                <svg
+					width="400" 
+					height="300"
+					viewBox="0 0 400 300" 
+					xmlns="http://www.w3.org/2000/svg">
+					<!--Vector a = 2i + 3j scale 40:1-->
+					<line x1="40" y1="200" x2="120" y2="80" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="70" y="120" font-size="25" stroke="brown" fill="brown" font-weight="bold">
+						a
+					</text>
+					<!--Vector b = 4i - 2j`scale 20:1-->
+					<line x1="120" y1="80" x2="280" y2="160" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="200" y="110" font-size="25" stroke="brown" fill="brown" font-weight="bold">
+						b
+					</text>
+					<!--Vector c = 3i - 2j scale 20:1-->
+					<line x1="280" y1="160" x2="400" y2="240" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="345" y="195" font-size="25" stroke="brown" fill="brown" font-weight="bold">
+						c
+					</text>
+					<!--Vector d = -9i + j scale 20:1-->
+					<line x1="400" y1="240" x2="40" y2="200" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
+				    <text x="200" y="210" font-size="25" stroke="brown" fill="brown" font-weight="bold">
+						d
+					</text>
+				</svg>
+
+                <figcaption class="lang lang-en"><b>Figure 2.2</b>, showing the sum of `veca`, `vecb`, `vecc` and `vecd` using the graphical method.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 2.2</b>, mostrando la suma de `veca`, `vecb`, `vecc` y `vecd` por el método gráfico.</figcaption>
+            </figure>
+
+            <p class="lang lang-en">
+                It can be seen that the origin of `veca` coincides with the end of `vecd`. So the vector resulting from said sum is the vector `vec0`, and its magnitude is zero.
+            </p>
+            <p class="lang lang-es" lang="es">
+                Se puede observar que el origen de `veca` coincide con el final de `vecd`. Así que el vector resultante de dicha suma es el vector `vec0`,  y su magnitud es cero.
+            </p>
+
+            <aside> <!-- references to concepts used in this problem target="_blank" will display the link in a new tab. -->    
+                <h4 class="lang lang-en">References</h4>
+                <h4 class="lang lang-es" lang="es">Referencias</h4>
+                <ul>
+                    <li>
+                        <a href="https://openstax.org/books/physics/pages/5-1-vector-addition-and-subtraction-graphical-methods"
+                            target="_blank">
+                            5.1 Vector Addition and Subtraction: Graphical Methods. Physics High School. Openstax.
+                        </a>
+                    </li>
+                </ul>    
+            </aside>
+        </section>
+
+        <section> <!--Exercise 3-->
+            <h3 class="lang lang-en">Exercise 3</h3>
+            <h3 class="lang lang-es" lang="es">Ejercicio 3</h3>
             <p class="lang lang-en">
                 An object moves in such a way that its velocity at a certain instant is 120 m/s and forms an angle of 30º with the horizontal. Find the horizontal and vertical components of the velocity. Express the velocity vector as a function of its components.
             </p>
@@ -1595,9 +1658,9 @@
             </aside>
         </section>
 
-        <section> <!--Problem 3-->
-            <h3 class="lang lang-en">Exercise 3</h3>
-            <h3 class="lang lang-es" lang="es">Ejercicio 3</h3>
+        <section> <!--Exercise 4-->
+            <h3 class="lang lang-en">Exercise 4</h3>
+            <h3 class="lang lang-es" lang="es">Ejercicio 4</h3>
             <p class="lang lang-en">
                 Find the scalar product of the vectors `5veci - 3vecj + 2veck`, `-2veci + vecj + 3veck` and the angle they form.
             </p>
@@ -1658,10 +1721,9 @@
             </aside>
         </section>
 
-        <section>
-            <!--Problem 4-->
-            <h3 class="lang lang-en">Exercise 4</h3>
-			<h3 class="lang lang-es" lang="es">Ejercicio 4</h3>
+        <section> <!--Exercise 5-->
+            <h3 class="lang lang-en">Exercise 5</h3>
+			<h3 class="lang lang-es" lang="es">Ejercicio 5</h3>
             <p class="lang lang-en">
                 An airplane is moving with a speed of 600 km/h in the NE direction. Find the projection of its velocity in the east direction.
             </p>
