--- a/index.html
+++ b/index.html
@@ -38,26 +38,31 @@
         <h1 class="lang lang-es" lang="es">BIENVENIDO A LA CASA DE PHI</h1>
     </header>
 
-    </div>
-    <p class="lang lang-en">Please, choose site language betwee English or Spanish.</p>
-    <p class="lang lang-es" lang="es">Por favor, elige el idioma del sitio entre Español o Inglés.</p>
+    <figure>
+        <img src="images/CuriousMonkey.jpg" alt="A curious monkey" width="320" height="227">
+    </figure>
+
+    <!--<p class="lang lang-en">Please, choose site language between English or Spanish.</p>
+    <p class="lang lang-es" lang="es">Por favor, elige el idioma del sitio entre Español o Inglés.</p>-->
+
     <select id="langSelector">
         <option value="en">English</option>
         <option value="es">Español</option>
     </select>
-    <div>
 
     <nav class="lang lang-en"> <!--Navigation bar. Links to the site's main sections-->
         <ul>
-            <li><a href="vectors.html">Vectors</a></li>
-            <li><a href="cinematics.html">Cinematics</a></li>
+            <li><a href="vectors.html">1. Vectors</a></li>
+            <li><a href="geometry.html">2. Geometry</a></li>
+            <li><a href="cinematics.html">3. Cinematics</a></li>
         </ul>
     </nav>
 
     <nav class="lang lang-es" lang="es"> <!--Navigation bar. Links to the site's main sections-->
         <ul>
-            <li><a href="vectors.html">Vectores</a></li>
-            <li><a href="cinematics.html">Cinemática</a></li>
+            <li><a href="vectors.html">1. Vectores</a></li>
+            <li><a href="geometry.html">2. Geometría</a></li>
+            <li><a href="cinematics.html">3. Cinemática</a></li>
         </ul>
     </nav>
 
