--- a/vectors.html
+++ b/vectors.html
@@ -37,7 +37,7 @@
     <header>
         <!-- id attribute define an unique identifier. Its purpose is to identify the element when linking, scripting, or styling -->
         <h2 id="Top" class="lang lang-en" >1. VECTORS</h2>
-        <h2 id="Top" class="lang lang-es" lang="es" >1. VECTORES</h2>
+        <h2 id="Arriba" class="lang lang-es" lang="es" >1. VECTORES</h2>
     </header>
 
     <nav class="lang lang-en"> <!--Navigation bar. Links to the site's main sections-->
@@ -64,8 +64,8 @@
     <div>
 
     <section> <!--1.1 Introduction-->
-        <h2 id="Vectors in Space" class="lang lang-en">1.1 Introduction--</h2>
-        <h2 id="Vectores" class="lang lang-es" lang="es">1.1 Introducción</h2>
+        <h3 id="Vectors in Space" class="lang lang-en">1.1 Introduction--</h3>
+        <h3 id="Vectores" class="lang lang-es" lang="es">1.1 Introducción</h3>
 
         <p class="lang lang-en">
             In this first chapter, we examine the concepts of vector, the Cartesian coordinate system and the main vector operations, which are key mathematical tools for dealing with vectors in more than one dimension.
@@ -77,8 +77,8 @@
     </section>
 
     <section><!--1.2 Vectors-->
-        <h3 class="lang lang-en">Vectors</h3>
-        <h3 class="lang lang-es" lang="es">Vectores</h3>
+        <h3 class="lang lang-en">1.2 ectors</h3>
+        <h3 class="lang lang-es" lang="es">1.2 Vectores</h3>
 
         <p class="lang lang-en">
             A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>, <!--<var class="vector1">v<span>&#8407;</span></var> --> `vecv` or `vec(AB)` <!-- <var class="vector2">AB<span>&#8594;</span></var> -->. A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by `vec0`. The vector `vec(BA)` is said to be the vector <strong>opposite</strong> to `vec(AB)`. A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
@@ -1141,7 +1141,7 @@
         <p>&emsp; </p>
         <div class="container">
             <div  class="center">`df = (delf)/(delx)dx + (delf)/(dely)dy + (delf)/(delz)dz`</div>
-            <div  class="right" id="[26]">[26]</div>
+            <div  class="right" id="[1.26]">[1.26]</div>
         </div>
     </section>
 
@@ -1203,7 +1203,7 @@
         </a>
         <h2 id="Ejercicios con vectores" class="lang lang-es" lang="es">EJERCIOS CON VECTORES</h2>
         <a class="lang lang-es" lang="es"
-            href="#Top">
+            href="#Arriba">
             Regresar arriba.
         </a>
         <section> <!--Exercise 1-->
